--- a/changelog.txt
+++ b/changelog.txt
@@ -4,3 +4,10 @@
 
 v1.0.0 (29.11.2015)
 - Релиз.
+
+v1.1.0 (30.11.2015)
+- Исправлена ошибка для городов, в которых нет пвз.
+- Убрана настройка добавления дней доставки.
+- Добавлена настройка кэширования.
+- Исправлено кэширование.
+- Мелкие правки.
