--- a/changelog.txt
+++ b/changelog.txt
@@ -11,3 +11,7 @@ v1.1.0 (30.11.2015)
 - Добавлена настройка кэширования.
 - Исправлено кэширование.
 - Мелкие правки.
+
+v1.1.1 (31.11.2015)
+- Исправлена ошибка с сохранением id пвз.
+- Правка локализации.
