--- a/changelog.txt
+++ b/changelog.txt
@@ -15,3 +15,10 @@ v1.1.0 (30.11.2015)
 v1.1.1 (31.11.2015)
 - Исправлена ошибка с сохранением id пвз.
 - Правка локализации.
+
+v1.1.2 (31.11.2015)
+- Исправлена ошибка с отображением складов с наличием товара в типе экспорта.
+- Исправлена ошибка определения id пвз при первом заказе.
+- Добавлена новая языковая переменная для статусов экспорта.
+- Правка локализации.
+- Добавлено отображение трекера почты.
