--- a/changelog.txt
+++ b/changelog.txt
@@ -22,3 +22,9 @@ v1.1.2 (31.11.2015)
 - Добавлена новая языковая переменная для статусов экспорта.
 - Правка локализации.
 - Добавлено отображение трекера почты.
+
+v1.1.3 (31.11.2015)
+- Исправлены ошибки.
+- Для заказов через почту при экспорте скрыт final_pv.
+- Для заказов через почту при экспорте добавлен выбор типа почты.
+- На вкладку данных о заказе добавлена информация о телефоне и адресе пвз.
