--- a/changelog.txt
+++ b/changelog.txt
@@ -28,3 +28,8 @@ v1.1.3 (31.11.2015)
 - Для заказов через почту при экспорте скрыт final_pv.
 - Для заказов через почту при экспорте добавлен выбор типа почты.
 - На вкладку данных о заказе добавлена информация о телефоне и адресе пвз.
+
+v1.2.0 (31.11.2015)
+- Изменен алгоритм получения pvz_address и pvz_phone.
+- В настройки добавлена вкладка с соответствиями статусов магазина статусам экспорта. При обновлении статуса экспорта статус заказа в магазине будет изменен на соответствующий ему из этих настроек.
+- Изменен алгоритм вывода курьерских доставок.
