--- a/changelog.txt
+++ b/changelog.txt
@@ -33,3 +33,6 @@ v1.2.0 (31.11.2015)
 - Изменен алгоритм получения pvz_address и pvz_phone.
 - В настройки добавлена вкладка с соответствиями статусов магазина статусам экспорта. При обновлении статуса экспорта статус заказа в магазине будет изменен на соответствующий ему из этих настроек.
 - Изменен алгоритм вывода курьерских доставок.
+
+v1.2.1 (31.11.2015)
+- Исправлена ошибка сохранения кода города доставки.
