--- a/changelog.txt
+++ b/changelog.txt
@@ -36,3 +36,6 @@ v1.2.0 (31.11.2015)
 
 v1.2.1 (31.11.2015)
 - Исправлена ошибка сохранения кода города доставки.
+
+v1.2.2 (31.11.2015)
+- Добавлено сохранение id курьерских доставок.
