--- a/changelog.txt
+++ b/changelog.txt
@@ -2,40 +2,50 @@
 ******************   RU   ******************
 ********************************************
 
-v1.0.0 (29.11.2015)
+v1.0.0 (29.10.2015)
 - Релиз.
 
-v1.1.0 (30.11.2015)
+v1.1.0 (30.10.2015)
 - Исправлена ошибка для городов, в которых нет пвз.
 - Убрана настройка добавления дней доставки.
 - Добавлена настройка кэширования.
 - Исправлено кэширование.
 - Мелкие правки.
 
-v1.1.1 (31.11.2015)
+v1.1.1 (31.10.2015)
 - Исправлена ошибка с сохранением id пвз.
 - Правка локализации.
 
-v1.1.2 (31.11.2015)
+v1.1.2 (31.10.2015)
 - Исправлена ошибка с отображением складов с наличием товара в типе экспорта.
 - Исправлена ошибка определения id пвз при первом заказе.
 - Добавлена новая языковая переменная для статусов экспорта.
 - Правка локализации.
 - Добавлено отображение трекера почты.
 
-v1.1.3 (31.11.2015)
+v1.1.3 (31.10.2015)
 - Исправлены ошибки.
 - Для заказов через почту при экспорте скрыт final_pv.
 - Для заказов через почту при экспорте добавлен выбор типа почты.
 - На вкладку данных о заказе добавлена информация о телефоне и адресе пвз.
 
-v1.2.0 (31.11.2015)
+v1.2.0 (31.10.2015)
 - Изменен алгоритм получения pvz_address и pvz_phone.
 - В настройки добавлена вкладка с соответствиями статусов магазина статусам экспорта. При обновлении статуса экспорта статус заказа в магазине будет изменен на соответствующий ему из этих настроек.
 - Изменен алгоритм вывода курьерских доставок.
 
-v1.2.1 (31.11.2015)
+v1.2.1 (31.10.2015)
 - Исправлена ошибка сохранения кода города доставки.
 
-v1.2.2 (31.11.2015)
+v1.2.2 (31.10.2015)
 - Добавлено сохранение id курьерских доставок.
+
+v1.2.3 (01.11.2015)
+- Добавлено сохранение сроков доставок.
+- Изменен алгоритм сохранения данных о выбранных методах доставки.
+- Поле tracker открыто для всех способов доставки.
+- На страницу экспорта добавлено отображение полей заказа: client_obl, client_city, address, zip.
+- Добавлены языковые переменные для новых статусов экспорта.
+- Добавлены новые соответствия статусов магазина статусам экспорта.
+- Добавлено фоновое обновление статусов экспорта на странице списка заказов.
+- Исправлена ошибка с пагинацей на странице заказов.
