--- a/changelog.txt
+++ b/changelog.txt
@@ -49,3 +49,8 @@ v1.2.3 (01.11.2015)
 - Добавлены новые соответствия статусов магазина статусам экспорта.
 - Добавлено фоновое обновление статусов экспорта на странице списка заказов.
 - Исправлена ошибка с пагинацей на странице заказов.
+
+v1.2.4 (02.11.2015)
+- Исправлено отображение суммы заказа в списке заказов на актуальную.
+- В выпадающий список пвз добавлен срок доставки.
+- Добавлена возможность отменить заказ без экспорта.
