--- a/changelog.txt
+++ b/changelog.txt
@@ -54,3 +54,6 @@ v1.2.4 (02.11.2015)
 - Исправлено отображение суммы заказа в списке заказов на актуальную.
 - В выпадающий список пвз добавлен срок доставки.
 - Добавлена возможность отменить заказ без экспорта.
+
+v1.2.5 (02.11.2015)
+- Исправлено обновление статусов экспорта в списке заказов.
