--- a/changelog.txt
+++ b/changelog.txt
@@ -57,3 +57,6 @@ v1.2.4 (02.11.2015)
 
 v1.2.5 (02.11.2015)
 - Исправлено обновление статусов экспорта в списке заказов.
+
+v1.2.6 (02.11.2015)
+- Добавлено обновление трекера при обновлении статуса заказа.
