--- a/changelog.txt
+++ b/changelog.txt
@@ -60,3 +60,6 @@ v1.2.5 (02.11.2015)
 
 v1.2.6 (02.11.2015)
 - Добавлено обновление трекера при обновлении статуса заказа.
+
+v1.2.7 (17.11.2015)
+- Исправлены ошибки в форме отправки заказа.
